api-reference/v2/accounting/invoice-payments/create-invoice-payments.mdx
---
version: "v2"
openapi: openapi_v2 post /accounting/invoice_payments
---

**The Invoice Payments Data Model** streamlines the representation and management of invoice payment information across multiple accounting platforms.

<RequestExample>

```bash cURL
curl --request POST \
  --url https://api.rootfi.dev/accounting/invoice_payments \
  --header 'Content-Type: application/json' \
  --header 'api_key: <api-key>' \
  --data '{
  "company_id": 1,
  "data": [
    {
      "invoice_id": "123456",
      "account_id": "123456",
      "contact_id": "123456",
      "amount": 100,
      "payment_date": "2021-09-28T15:00:00.000Z",
      "document_number": "ROOTFI01",
      "memo": "Test Memo"
    }
  ]
}'
```

```javascript NodeJS
import { RootFiClient } from "rootfi-api";
const rootfi = new RootFiClient({ apiKey: "<api_key>" });

await rootfi.accounting.invoicePayment.create({
  company_id: 1,
  data: [
    {
      invoice_id: "123456",
      account_id: "123456",
      contact_id: "123456",
      amount: 100,
      payment_date: "2021-09-28T15:00:00.000Z",
      document_number: "ROOTFI01",
      memo: "Test Memo",
    },
  ],
});
```

</RequestExample>
