api-reference/v3/accounting/invoice-payments/create-invoice-payments.mdx
---
version: "v3"
openapi: openapi_v3 post /accounting/invoice_payments
---

**The Invoice Payments Data Model** streamlines the representation and management of invoice payment information across multiple accounting platforms.

## Additional Required Fields

To successfully create an invoice payment, certain fields must be included in the raw_data object of the request body. The required fields are as follows:

| Integration     | Field              | Description                                            | Required |
| --------------- | ------------------ | ------------------------------------------------------ | -------- |
| MS_DYNAMICS_365 | payment_journal_id | The ID of the payment journal.                         | Yes      |
| NETSUITE        | arr_account_id     | The ID of the account to which the payment is applied. | Yes      |

<RequestExample>

```bash cURL
curl --request POST \
  --url https://api.rootfi.dev/v3/accounting/invoice_payments \
  --header 'Content-Type: application/json' \
  --header 'api_key: <api-key>' \
  --data '{
  "company_id": 1,
  "data": [
    {
      "invoice_id": "123456",
      "account_id": "123456",
      "contact_id": "123456",
      "amount": 100,
      "payment_date": "2021-09-28T15:00:00.000Z",
      "document_number": "ROOTFI01",
      "memo": "Test Memo"
    }
  ]
}'
```

```javascript NodeJS
import { RootFiClient } from "rootfi-api";
const rootfi = new RootFiClient({ apiKey: "<api_key>" });

await rootfi.accounting.invoicePayment.create({
  company_id: 1,
  data: [
    {
      invoice_id: "123456",
      account_id: "123456",
      contact_id: "123456",
      amount: 100,
      payment_date: "2021-09-28T15:00:00.000Z",
      document_number: "ROOTFI01",
      memo: "Test Memo",
    },
  ],
});
```

</RequestExample>
